--- a/AssetRipper.Bindings.DxilSpirV/AssetRipper.Bindings.DxilSpirV.csproj
+++ b/AssetRipper.Bindings.DxilSpirV/AssetRipper.Bindings.DxilSpirV.csproj
@@ -2,8 +2,34 @@
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
+		<LangVersion>Latest</LangVersion>
 		<Nullable>enable</Nullable>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<IsAotCompatible>true</IsAotCompatible>
+		<CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
+
+		<Version>1.0.0</Version>
+		<Authors>ds5678</Authors>
+		<Copyright>Copyright (c) 2025 ds5678</Copyright>
+		<Company>AssetRipper</Company>
+		<Description>Wrapper library for dxil-spirv.</Description>
+
+		<PackageId>AssetRipper.Bindings.SpirVCross</PackageId>
+		<PackageTags>C# shader spirv dxil</PackageTags>
+		<RepositoryUrl>https://github.com/AssetRipper/AssetRipper.Bindings.DxilSpirV</RepositoryUrl>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryType>git</RepositoryType>
+		<PackageProjectUrl>$(RepositoryUrl)</PackageProjectUrl>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>1591</NoWarn>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="../README.md" Pack="true" PackagePath="\" />
+		<None Include="NativeLibraries\**\*.*" Pack="true" PackagePath="runtimes\" />
+	</ItemGroup>
 
 </Project>
