--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -37,6 +37,34 @@ jobs:
             echo "changed=true" >> $GITHUB_ENV
           fi
 
+      - name: Install NuGet CLI
+        if: env.changed == 'true'
+        run: |
+          sudo apt install -y nuget
+
+      - name: Download NuGet packages
+        if: env.changed == 'true'
+        run: |
+          nuget install libClang.runtime.linux-x64 -OutputDirectory ${{ github.workspace }}/nuget-packages
+          nuget install libClangSharp.runtime.linux-x64 -OutputDirectory ${{ github.workspace }}/nuget-packages
+
+      - name: Extract specific files
+        if: env.changed == 'true'
+        run: |
+          # Create the bin directory to extract the file to
+          mkdir -p ${{ github.workspace }}/nuget-packages/bin
+          # Use wildcard to match any file, for example, *.dll
+          unzip -o "${{ github.workspace }}/nuget-packages/*.runtime.linux-x64*/runtimes/linux-x64/native/*.so" -d ${{ github.workspace }}/nuget-packages/bin
+
+      - name: Make files executable
+        if: env.changed == 'true'
+        run: chmod +x ${{ github.workspace }}/nuget-packages/bin/*.so
+
+      - name: Add to system path
+        if: env.changed == 'true'
+        run: |
+          echo "${{ github.workspace }}/nuget-packages/bin" >> $GITHUB_ENV
+
       - name: Setup .NET
         if: env.changed == 'true'
         uses: actions/setup-dotnet@v4
@@ -46,8 +74,6 @@ jobs:
       - name: Run generator
         if: env.changed == 'true'
         run: |
-          dotnet tool install --global libClang.runtime.linux-x64
-          dotnet tool install --global libClangSharp.runtime.linux-x64
           bash ./generate.bat
           git add -A
 
