[skip ci] use setup-nuget action

--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -38,9 +38,7 @@ jobs:
           fi
 
       - name: Install NuGet CLI
-        if: env.changed == 'true'
-        run: |
-          sudo apt install -y nuget
+        uses: nuget/setup-nuget@v2
 
       - name: Download NuGet packages
         if: env.changed == 'true'
