--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -52,8 +52,12 @@ jobs:
           nuget install libClang.runtime.linux-x64 -OutputDirectory ${{ github.workspace }}/nuget-packages
           nuget install libClangSharp.runtime.linux-x64 -OutputDirectory ${{ github.workspace }}/nuget-packages
 
-          # Unzip the packages
           mkdir -p ${{ github.workspace }}/nuget-packages/bin
+
+          # List the directory contents
+          ls -R ${{ github.workspace }}/nuget-packages
+
+          # Unzip the packages
           files=($(find ${{ github.workspace }}/nuget-packages -maxdepth 1 -type f))
           for file in "${files[@]}"; do
             echo "Unzipping $file"
