--- a/.github/workflows/automated_merge.yml
+++ b/.github/workflows/automated_merge.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   automerge:
     runs-on: ubuntu-latest
-    if: github.actor == 'github-actions[bot]' || github.actor == 'dependabot[bot]'
+    if: github.actor == 'dependabot[bot]'
     steps:
       - uses: peter-evans/enable-pull-request-automerge@v3
         with:
