--- a/AssetRipper.Bindings.DxilSpirV/AssetRipper.Bindings.DxilSpirV.csproj
+++ b/AssetRipper.Bindings.DxilSpirV/AssetRipper.Bindings.DxilSpirV.csproj
@@ -8,7 +8,7 @@
 		<IsAotCompatible>true</IsAotCompatible>
 		<CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
 
-		<Version>1.0.0</Version>
+		<VersionPrefix>1.0.0</VersionPrefix>
 		<Authors>ds5678</Authors>
 		<Copyright>Copyright (c) 2025 ds5678</Copyright>
 		<Company>AssetRipper</Company>
