--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -129,7 +129,8 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 9.0.x
+        dotnet-version: 10.0.x
+        include-prerelease: true
 
     - name: Download Native - Windows Arm64
       uses: actions/download-artifact@v5
