--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -47,7 +47,8 @@ jobs:
         if: env.changed == 'true'
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 9.0.x
+          dotnet-version: 10.0.x
+          include-prerelease: true
 
       - name: Run generator
         if: env.changed == 'true'
