--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,9 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
+    ignore:
+      - dependency-name: "Microsoft.NET.ILLink.Tasks"
+      - dependency-name: "Microsoft.DotNet.ILCompiler"
 
   - package-ecosystem: "github-actions"
     # Workflow files stored in the
