--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,3 +190,5 @@ jobs:
     needs: build_managed
     steps:
       - run: gh pr merge --squash --auto "${{ github.event.pull_request.number }}"
+        env:
+          GH_TOKEN: ${{ github.token }}
