--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,12 +183,8 @@ jobs:
       run: |
         dotnet nuget push ./AssetRipper.Bindings.DxilSpirV/bin/Release/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
 
-  automerge:
-    name: Automatically Merge
-    runs-on: ubuntu-latest
-    if: (github.actor == 'github-actions[bot]' || github.actor == 'dependabot[bot]' || github.actor == 'ds5678') && github.event_name == 'pull_request'
-    needs: build_managed
-    steps:
-      - run: gh pr merge --squash --auto "${{ github.event.pull_request.number }}"
-        env:
-          GH_TOKEN: ${{ github.token }}
+    - name: Automatically Merge
+      if: (github.actor == 'github-actions[bot]' || github.actor == 'dependabot[bot]' || github.actor == 'ds5678') && github.event_name == 'pull_request'
+      run: gh pr merge --squash --auto "${{ github.event.pull_request.number }}"
+      env:
+        GH_TOKEN: ${{ github.token }}
